update to pass file to api
