# api/swagger_server/models/body.py
@@ -1,0 +1,126 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Body(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, files: str=None, user_id: str=None, uuid: str=None):  # noqa: E501
+        """Body - a model defined in Swagger
+
+        :param files: The files of this Body.  # noqa: E501
+        :type files: str
+        :param user_id: The user_id of this Body.  # noqa: E501
+        :type user_id: str
+        :param uuid: The uuid of this Body.  # noqa: E501
+        :type uuid: str
+        """
+        self.swagger_types = {
+            'files': str,
+            'user_id': str,
+            'uuid': str
+        }
+
+        self.attribute_map = {
+            'files': 'files',
+            'user_id': 'user_id',
+            'uuid': 'uuid'
+        }
+        self._files = files
+        self._user_id = user_id
+        self._uuid = uuid
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Body':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The body of this Body.  # noqa: E501
+        :rtype: Body
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def files(self) -> str:
+        """Gets the files of this Body.
+
+        Stores data and assignes a unique_id if one is not given, otherwise overwrites.  # noqa: E501
+
+        :return: The files of this Body.
+        :rtype: str
+        """
+        return self._files
+
+    @files.setter
+    def files(self, files: str):
+        """Sets the files of this Body.
+
+        Stores data and assignes a unique_id if one is not given, otherwise overwrites.  # noqa: E501
+
+        :param files: The files of this Body.
+        :type files: str
+        """
+        if files is None:
+            raise ValueError("Invalid value for `files`, must not be `None`")  # noqa: E501
+
+        self._files = files
+
+    @property
+    def user_id(self) -> str:
+        """Gets the user_id of this Body.
+
+        user_id  # noqa: E501
+
+        :return: The user_id of this Body.
+        :rtype: str
+        """
+        return self._user_id
+
+    @user_id.setter
+    def user_id(self, user_id: str):
+        """Sets the user_id of this Body.
+
+        user_id  # noqa: E501
+
+        :param user_id: The user_id of this Body.
+        :type user_id: str
+        """
+        if user_id is None:
+            raise ValueError("Invalid value for `user_id`, must not be `None`")  # noqa: E501
+
+        self._user_id = user_id
+
+    @property
+    def uuid(self) -> str:
+        """Gets the uuid of this Body.
+
+        uuid  # noqa: E501
+
+        :return: The uuid of this Body.
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid: str):
+        """Sets the uuid of this Body.
+
+        uuid  # noqa: E501
+
+        :param uuid: The uuid of this Body.
+        :type uuid: str
+        """
+        if uuid is None:
+            raise ValueError("Invalid value for `uuid`, must not be `None`")  # noqa: E501
+
+        self._uuid = uuid
