# swagger.json
@@ -111,24 +111,39 @@
       }
     },
     "/save": {
-      "get": {
+      "post": {
         "tags": [
           "save"
         ],
         "summary": "Save a data set, by unique_id or get a new one",
+        "consumes": [
+          "multipart/form-data"
+        ],
         "description": "Multiple status values can be provided with comma separated strings",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "in": "body",
-            "name": "body",
+            "in": "formData",
+            "name": "files",
             "description": "Stores data and assignes a unique_id if one is not given, otherwise overwrites.",
             "required": true,
-            "schema": {
-              "$ref": "#/definitions/DataUID"
-            }
+            "type": "file"
+          },
+          {
+            "in": "formData",
+            "name": "user_id",
+            "type": "string",
+            "description": "user_id",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "uuid",
+            "type": "string",
+            "description": "uuid",
+            "required": true
           }
         ],
         "responses": {
@@ -142,7 +157,7 @@
       }
     },
     "/get_item": {
-      "post": {
+      "get": {
         "tags": [
           "get_item"
         ],
